Aligned items and fix scroll issue

--- a/assets/css/tailwind.css
+++ b/assets/css/tailwind.css
@@ -16,3 +16,25 @@ body {
         @apply cursor-pointer
     }
 }
+
+::-webkit-scrollbar {
+    width: 8px;
+    height: 8px;
+  }
+   
+::-webkit-scrollbar-thumb {
+    background-color: hsla(0, 0%, 0%, 0.25); 
+    cursor: default;
+    border-radius: 10px;
+}
+
+::-webkit-scrollbar-thumb:hover {
+    background-color: hsla(0, 0%, 0%, 0.5); 
+}
+
+
+  /* .scrolling::-webkit-scrollbar-thumb {
+    background-color: hsla(0, 0%, 0%, 0.5);
+    border-radius: 10px;
+  } */
+  
